--- a/hearthstonedcks/src/main/resources/static/registrarse.html
+++ b/hearthstonedcks/src/main/resources/static/registrarse.html
@@ -16,7 +16,7 @@
 			<input type="text" name="nick" placeholder="Nombre de Usuario" required>
 			<input type="email" name="correo" placeholder="Direccion de correo electronico" required>
 			<input type="password" name="contrasenia" placeholder="Contraseña" required>
-			<input type="date" name="fechanac" placeholder="Fecha de Nacimiento" required>
+			<input type="text" name="fechanac" placeholder="Fecha de Nacimiento" required>
 			<input type="text" name="pais" placeholder="Pais de Origen" required>
 			<input type="submit" value="Registrarse" required class="btn_enviar">
 			<p class="form_link">¿Ya tienes cuenta?<a href="login.html">Inicie sesión aquí</a></p>
