--- a/hearthstonedcks/src/main/resources/static/publicarN.html
+++ b/hearthstonedcks/src/main/resources/static/publicarN.html
@@ -3,14 +3,14 @@
 	<head>
 		<meta charset="ISO-8859-1">
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1">
-		<title>Publicar</title>
+		<title>PublicarNoticia</title>
 	<link rel="stylesheet" href="sRegister.css">
 	</head>
 	
 	<body>
 	<h1><br></h1>
-		<form action="/anuncio" method="post" class="form_register">
-		<h2 class="form_titulo">NUEVO ANUNCIO</h2>	
+		<form action="/noticia" method="post" class="form_register">
+		<h2 class="form_titulo">NUEVA NOTICIA</h2>	
 		<div class="contenedor-inputs">
 		    <div>
 		        <input placeholder="Titulo" maxlength="30" type="text"  id="titulo" name="titulo" required>
@@ -23,7 +23,7 @@
 		    <p></p>
 		    <div>
 		    	
-		    	<input placeholder="Fecha del Anuncio" maxlength="20" type="text" id="fechaAnuncio" name="fechaAnuncio" required>
+		    	<input placeholder="Fecha de la Noticia" maxlength="20" type="text" id="fechaNoticia" name="fechaNoticia" required>
 		    </div>
 		    
 		   <input type="submit" value="Publicar" required class="btn_enviar">
